# Facultate

./: README.md
Facultate/An1/Sem1/Python_Stuff/: .coverage  Calculator.ipynb  Cheltuieli.ipynb  Lab1.ipynb  Lab2.ipynb  Lab3.ipynb
Facultate/An1/Sem2/OS/: .mineA.c.swp  .pr1.c.swp  .tryA.c.swp  1.sh  14.sh  2.sh  3.sh  5.sh  6.sh  7.sh  8.sh  A  B  LA  LB  common.h  create_sh.sh  hol.txt  (+16 more)
Facultate/An1/Sem2/Oop/Lab6/: CMakeCache.txt  CMakeLists.txt  Makefile  app  c_app  cmake_install.cmake  compile_commands.json  contract.cpp  main.cpp  repository.h  services.h  test  test-contract.gcda  test-contract.gcno  test-disciplina.gcda  test-disciplina.gcno  test-main.gcda  test-main.gcno  test-my_vector.gcno  test-raport.gcda  test-raport.gcno  test-repository.gcda  test-repository.gcno  test-services.gcda  test-services.gcno  test-teste.gcda  test-teste.gcno  test-ui.gcda  test-ui.gcno  test-undo.gcno  test-validator.gcda  test-validator.gcno  ui.cpp  validator.cpp  validator.h
Facultate/An1/Sem2/Oop/Lab6/.cache/clangd/index/: contract.h.4C7A211419A095FF.idx  disciplina.cpp.30E739570B8D961E.idx  disciplina.h.A7CB860DE15393BE.idx  main.cpp.3360F3858C7066E3.idx  my_vector.h.28C8F205DFF9D75D.idx  raport.h.52BE875081776AE1.idx  repository.cpp.619686FC9FBC49D7.idx  repository.h.2A7A5487260432C2.idx  services.cpp.99EB66782C417B02.idx  services.h.DD6B9DC1155E25EA.idx  teste.cpp.8C86E734D5EB9A50.idx  teste.h.479DAD10856D6993.idx  ui.cpp.737DF69AEA64FE77.idx  ui.h.25B06D0D72CA341B.idx  undo.h.F256434D2AAB8907.idx  validator.cpp.730DFAAF107FB38C.idx  validator.h.190CE62122077496.idx
(+1249 files in other folders)
